--- a/wp-content/themes/star/css/style.css
+++ b/wp-content/themes/star/css/style.css
@@ -938,21 +938,30 @@ ul {
   color: #0083d7; }
 
 .chpcs_title {
-  font-weight: normal;
-  font-size: 14px;
+  font-weight: bold;
+  font-size: 53px;
   text-align: left;
   padding-top: 10px;
-  line-height: 19px; }
+  line-height: 19px;
+  color: #5f5c5a !important; }
+  .chpcs_title span {
+    display: block;
+    font-weight: normal; }
   .chpcs_title a {
-    color: #5f5c5a; }
+    color: #5f5c5a !important; }
 
 .chpcs_foo_content {
   text-align: left !important;
+  margin: 10px 20px; }
+
+.chpcs_img img {
+  width: 160px;
+  height: 160px;
   margin: 10px; }
 
 .chpcs_img img {
-  width: 180px;
-  height: 180px; }
+  width: 110px;
+  height: 110px; }
 
 .chpcs_more a {
   text-align: left !important;
