--- a/wp-content/themes/star/style.css
+++ b/wp-content/themes/star/style.css
@@ -938,40 +938,26 @@ ul {
   color: #0083d7; }
 
 .chpcs_title {
-<<<<<<< HEAD
   font-weight: bold;
   font-size: 13px;
   text-align: left;
   padding-top: 10px;
-  line-height: 19px; }
+  line-height: 19px;
+  color: #5f5c5a !important; }
   .chpcs_title span {
     display: block;
     font-weight: normal; }
-=======
-  font-weight: normal;
-  font-size: 14px;
-  text-align: left;
-  padding-top: 10px;
-  line-height: 19px; }
->>>>>>> origin/Angel
   .chpcs_title a {
-    color: #5f5c5a; }
+    color: #5f5c5a !important; }
 
 .chpcs_foo_content {
   text-align: left !important;
-<<<<<<< HEAD
   margin: 10px 20px; }
 
 .chpcs_img img {
   width: 160px;
-  height: 160px; }
-=======
-  margin: 10px; }
-
-.chpcs_img img {
-  width: 110px;
-  height: 110px; }
->>>>>>> origin/Angel
+  height: 160px;
+  margin: 0px; }
 
 .chpcs_more a {
   text-align: left !important;
