--- a/wp-content/themes/star/style.scss
+++ b/wp-content/themes/star/style.scss
@@ -1242,48 +1242,36 @@ ul {
 }
 
 .chpcs_title {
-<<<<<<< HEAD
-  font-weight: bold;
-  font-size: 13px;
-  text-align: left;
-  padding-top: 10px;
-  line-height: 19px;
-  
-  span {
-	  display: block;
-	  font-weight: normal;
-  }
-=======
-  font-weight: normal;
-  font-size: 14px;
-  text-align: left;
-  padding-top: 10px;
-  line-height: 19px;
->>>>>>> origin/Angel
+	font-weight: bold;
+	font-size: 13px;
+	text-align: left;
+	padding-top: 10px;
+	line-height: 19px;
+	color: $copy!important;
+
+	span {
+		display: block;
+		font-weight: normal;
+	}
 
 	 a {
-
-	     color: $copy;
+	     color: $copy!important;
 	 }
 }
 
 .chpcs_foo_content {
 	text-align: left!important;
-<<<<<<< HEAD
   	margin: 10px 20px;
 }
 
-.chpcs_img img {
-	width: 160px;
-	height: 160px;
-=======
-  	margin: 10px;
-}
-
-.chpcs_img img {
-	width: 110px;
-	height: 110px;
->>>>>>> origin/Angel
+.chpcs_img {
+	
+	
+	img {
+		width: 160px;
+		height: 160px;
+		margin: 0px;
+	}
 }
  
  .chpcs_more {
